feat:Create an initial implementation.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: 2022 Comcast Cable Communications Management, LLC
+# SPDX-FileCopyrightText: 2023 Comcast Cable Communications Management, LLC
 # SPDX-License-Identifier: Apache-2.0
 ---
 version: "2"
@@ -7,7 +7,6 @@ linters:
     - bodyclose
     - dupl
     - errorlint
-    - funlen
     - goconst
     - gosec
     - misspell
@@ -19,8 +18,6 @@ linters:
   settings:
     errorlint:
       errorf: false
-    goconst:
-      min-occurrences: 4
     misspell:
       locale: US
   exclusions:
@@ -34,8 +31,13 @@ linters:
       - linters:
           - dupl
           - funlen
+          - gosec
         path: _test.go
+      - linters:
+          - gosec
+        path: internal/credentials/cmd/example/main.go
     paths:
+      - internal/jwtxt/keypairs_for_test.go
       - third_party$
       - builtin$
       - examples$
