--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,36 @@
-# SPDX-FileCopyrightText: 2025 Comcast Cable Communications Management, LLC
-# SPDX-License-Identifier: Apache-2.0
-
-# Binaries for programs and plugins
+# Binaries
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+bin/
+dist/
 
-# Test binary, built with `go test -c`
+# Test files
 *.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+coverage.out
+coverage.html
+coverage-integration.out
+coverage-integration.html
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
-
-# Go workspace file
+# Go workspace
 go.work
 go.work.sum
 
-# env file
-.env
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
 
-.vscode/**
+# OS
+.DS_Store
+Thumbs.db
 
-.claude/**
-
-*.pem
+# Project tooling and spec artifacts
+.claude/
+.specify/
+specs/
