--- a/REUSE.toml
+++ b/REUSE.toml
@@ -4,6 +4,12 @@ SPDX-PackageSupplier = "Weston Schmidt <weston_scmidt@alumni.purdue.edu>"
 SPDX-PackageDownloadLocation = "https://github.com/xmidt-org/wrpkafka"
 
 [[annotations]]
+path = ".gitignore"
+precedence = "aggregate"
+SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2025 Comcast Cable Communications Management, LLC"
+SPDX-License-Identifier = "Apache-2.0"
+
+[[annotations]]
 path = "go.mod"
 precedence = "aggregate"
 SPDX-FileCopyrightText = "SPDX-FileCopyrightText: 2025 Comcast Cable Communications Management, LLC"
